# libjson-rpc-cpp

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: CMakeDependencies.cmake
src/examples/: CMakeLists.txt  stubclient.cpp  stubserver.cpp  xbmcremote.cpp
src/jsonrpccpp/: CMakeLists.txt
src/jsonrpccpp/server/connectors/: httpserver.cpp  redisserver.cpp
src/stubgenerator/: CMakeLists.txt
src/test/: CMakeLists.txt  test_connector_http.cpp  test_integration.cpp  testredisserver.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
